# feedbotpush

./: .gitignore  Dockerfile  README.md  app_database.db  docker-compose.yml  prompt.md  pyproject.toml
.github/workflows/: docker.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/core/: config.py
app/services/: feedback_analyzer.py  webhook_sender.py
app/tasks/: daily_summary.py
