[project]
name = "docl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bangwu", email = "i@bangwu.top" }
]
dependencies = [
    "sqlmodel>=0.0.24",
    "fastapi[standard]>=0.115.12",
    "openai>=1.81.0",
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "markdown>=3.8",
    "beautifulsoup4>=4.13.4",
    "pydantic-settings>=2.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docl"]
